Fix table alignment

--- a/code/static/statmeal.css
+++ b/code/static/statmeal.css
@@ -159,10 +159,19 @@ article {
     color: white;
 }
 
+iframe {
+    border: 0;
+    height: 190px;
+    width: 100%;
+    overflow: hidden;
+}
+
 table {
     color: white;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #474747;
-    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 form {
